# plonk

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  book.toml  docker-compose.yml  types.json
.github/workflows/: node.yml  pallet.yml
benches/: plonk.rs
book/: 0_0_introduction.md  0_0_tutorial.md  SUMMARY.md  book.toml
book/docs/: 0_0_introduction.html  0_1_tutorial.html  404.html  index.html  print.html  searchindex.js  searchindex.json
book/inline/: settings.html  source-files.js
book/inline/ahash/: all.html  index.html  struct.RandomState.html
book/inline/anyhow/: index.html  macro.anyhow.html  macro.ensure.html  type.Result.html
book/inline/arrayref/: all.html  macro.array_ref.html  macro.mut_array_refs.html
book/inline/arrayvec/: all.html  index.html  struct.ArrayVec.html  struct.Drain.html
book/inline/async_trait/: all.html  index.html
book/inline/base58/: all.html
book/inline/bip39/: enum.ErrorKind.html  enum.Language.html  struct.Mnemonic.html
book/inline/bitvec/: all.html  index.html  macro.bitarr.html  macro.bitbox.html  macro.bits.html
book/inline/blake2_rfc/: index.html
book/inline/byte_slice_cast/: enum.Error.html  trait.AsByteSlice.html  trait.AsMutByteSlice.html  trait.AsMutSliceOf.html  trait.FromByteSlice.html
book/inline/chrono/: constant.MAX_DATE.html  constant.MAX_DATETIME.html  constant.MIN_DATE.html  enum.Month.html  enum.Weekday.html  struct.Date.html  struct.ParseMonthError.html  trait.Datelike.html
book/inline/constant_time_eq/: all.html  index.html
book/inline/crossbeam_channel/: enum.RecvTimeoutError.html  enum.SendTimeoutError.html  fn.after.html  fn.never.html  index.html  macro.select.html  struct.RecvError.html  struct.SendError.html  struct.TryReadyError.html  struct.TrySelectError.html
book/inline/crossbeam_deque/: struct.Stealer.html
book/inline/crossbeam_epoch/: fn.default_collector.html  fn.pin.html  fn.unprotected.html  struct.Atomic.html  struct.CompareExchangeError.html  struct.Shared.html  trait.CompareAndSetOrdering.html  type.CompareAndSetError.html
book/inline/crossbeam_utils/: index.html  struct.Backoff.html
book/inline/crunchy/: index.html
book/inline/crypto_mac/: all.html  index.html  struct.MacError.html  trait.NewMac.html
book/inline/curve25519_dalek/: all.html  index.html
book/inline/derive_hex/: derive.HexDebug.html  sidebar-items.js
book/inline/dusk_bls12_381/: all.html  constant.ROOT_OF_UNITY.html  constant.TWO_ADACITY.html  fn.pairing.html  index.html  sidebar-items.js  struct.G1Projective.html  struct.G2Affine.html  struct.G2Prepared.html
book/inline/dusk_bytes/: all.html  derive.Hex.html  enum.Error.html  fn.hex.html  trait.BadLength.html  trait.DeserializableSlice.html  trait.InvalidChar.html  trait.ParseHexStr.html  trait.Read.html  trait.Write.html
book/inline/dusk_jubjub/: constant.EDWARDS_D.html  constant.EDWARDS_D2.html  constant.GENERATOR_NUMS_EXTENDED.html  fn.dhke.html  index.html  struct.JubJubScalar.html
book/inline/dusk_plonk/: index.html  sidebar-items.js
book/inline/dyn_clonable/: all.html
book/inline/dyn_clonable_impl/: attr.clonable.html
book/inline/dyn_clone/: all.html  fn.clone.html  index.html  trait.DynClone.html
book/inline/ed25519/: constant.SIGNATURE_LENGTH.html
book/inline/ed25519_dalek/: all.html  constant.EXPANDED_SECRET_KEY_LENGTH.html  constant.SECRET_KEY_LENGTH.html  constant.SIGNATURE_LENGTH.html  index.html  struct.ExpandedSecretKey.html  struct.Keypair.html  struct.PublicKey.html  struct.SecretKey.html  struct.Sha512.html  trait.Digest.html
book/inline/fixed_hash/: all.html  macro.construct_fixed_hash.html
book/inline/frame_metadata/: all.html  enum.StorageEntryType.html  enum.StorageHasher.html  index.html  struct.DefaultByteGetter.html  struct.ExtrinsicMetadata.html  struct.FnEncode.html  struct.FunctionArgumentMetadata.html  struct.ModuleConstantMetadata.html  struct.OuterEventMetadata.html  struct.RuntimeMetadataV12.html  struct.StorageMetadata.html  trait.DefaultByte.html  type.DecodeDifferentArray.html
book/inline/frame_support/: all.html  attr.pallet.html  attr.require_transactional.html  derive.DebugNoBound.html  derive.EqNoBound.html  derive.RuntimeDebugNoBound.html  enum.Never.html  enum.Void.html  macro.assert_err_ignore_postinfo.html  macro.assert_err_with_weight.html  macro.assert_ok.html  macro.assert_storage_noop.html  (+19 more)
book/src/: SUMMARY.md
client/: Cargo.toml
client/src/: lib.rs
docker/: Nightly
docs/: 0_0_introduction.html  0_0_tutorial.html  0_1_tutorial.html  404.html  index.html  print.html  searchindex.js  searchindex.json
docs/inline/: crates.js
examples/: Cargo.toml  plonk.rs
examples/node/: Cargo.toml
examples/pallet/: Cargo.toml
examples/pallet/runtime-api/: Cargo.toml
examples/runtime/: Cargo.toml
examples/src/: lib.rs  tests.rs
examples/zk-storage/: Cargo.toml
experiment/node/: Cargo.toml
experiment/pallets/template/: Cargo.toml
experiment/pallets/template/rpc/: Cargo.toml
experiment/pallets/template/rpc/runtime-api/: Cargo.toml
experiment/pallets/template/rpc/runtime-api/src/: lib.rs
experiment/pallets/template/rpc/src/: lib.rs
experiment/pallets/template/src/: lib.rs  mock.rs  tests.rs  traits.rs  types.rs
experiment/pallets/template/sum-storage/rpc/: Cargo.toml
experiment/pallets/template/sum-storage/rpc/src/: lib.rs
experiment/pallets/template/sum-storage/src/: tests.rs
experiment/runtime/: Cargo.toml
experiment/runtime/src/: genesis.rs  lib.rs
node/: Cargo.toml
pallets/template/: .gitignore  Cargo.toml  README.md
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/src/: lib.rs
pallets/template/runtime/: Cargo.toml
pallets/template/scripts/: publish.sh
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  srs.rs
plonk/: Cargo.toml
rpc/: Cargo.toml
rpc/runtime-api/: Cargo.toml
rpc/runtime-api/src/: lib.rs
rpc/src/: lib.rs
runtime/: Cargo.toml
runtime-api/: Cargo.toml
runtime-api/src/: lib.rs
runtime/src/: lib.rs
scripts/: run.sh
src/: lib.rs  mock.rs  tests.rs  traits.rs  types.rs
(+22110 files in other folders)
