[package]
authors = ['NoCtrlZ<shinsaku.ashizawa@artree.co.jp>']
description = 'zkSNARK plonk pallet'
edition = '2018'
homepage = 'https://github.com/PlasmNetwork/plonk/'
license = 'Unlicense'
name = 'plonk-pallet'
readme = 'README.md'
repository = 'https://github.com/PlasmNetwork/plonk/'
version = '0.0.1'

[dependencies]
# dusk plonk
dusk-plonk = { git = "https://github.com/PlasmNetwork/dusk-plonk", rev = "0e9d99425cccbc75a6b586bca5b10e2e35bc85c0" }
dusk-jubjub = { git = "https://github.com/PlasmNetwork/jubjub", rev = "1c24aa0cb4f7288c830cdbeb3c6bdd5456c9852a" }
rand_core = {version="0.6", default-features=false}
# substrate pallet
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }
frame-support = { version = '3.0', default-features = false}
frame-system = { version = '3.0', default-features = false}
sp-runtime = { version = '3.0', default-features = false}
sp-std = { version = '3.0', default-features = false}
serde = { versions = "1.0.130", features = ["derive"] }

[dev-dependencies]
serde = '1.0'
sp-core = '3.0'
sp-io = '3.0'
criterion = "0.3"
ark-std = { version = "0.3", features = ["print-trace"] }

[features]
default = ["std"]
std = [
    "rand_core/std",
	"parity-scale-codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]

[[bench]]
name = "plonk"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
