[package]
authors = ['NoCtrlZ<shinsaku.ashizawa@artree.co.jp>']
description = 'zkSNARK plonk pallet'
edition = '2018'
homepage = 'https://github.com/PlasmNetwork/plonk/'
license = "Apache-2.0"
name = 'plonk-pallet'
readme = 'README.md'
repository = 'https://github.com/PlasmNetwork/plonk/'
version = '0.1.0'

[dependencies]
# dusk plonk
dusk-plonk = {version = "0.1", package="parity-plonk"}
dusk-jubjub = {version = "0.1", default-features = false, package="plonk-jubjub"}
rand_core = {version="0.6", default-features=false}
# substrate pallet
frame-support = { version = '3.0', default-features = false}
frame-system = { version = '3.0', default-features = false}
sp-runtime = { version = '3.0', default-features = false}
sp-std = { version = '3.0', default-features = false}
# parity codec
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }
serde = {version = "1.0", features = ["derive"]}

[dev-dependencies]
sp-core = '3.0'
sp-io = '3.0'
criterion = "0.3"
ark-std = { version = "0.3", features = ["print-trace"] }

[features]
default = ["std"]
std = [
    "rand_core/std",
	"parity-scale-codec/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]

[[bench]]
name = "plonk"
harness = false

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1
