[package]
authors = ['NoCtrlZ<shinsaku.ashizawa@artree.co.jp>']
description = 'zkSNARK plonk pallet'
edition = '2018'
homepage = 'https://github.com/PlasmNetwork/plonk/'
license = "Apache-2.0"
name = 'plonk-pallet'
readme = 'README.md'
repository = 'https://github.com/PlasmNetwork/plonk/'
version = '0.2.2'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# plonk
fullcodec-plonk = {version = "0.2", default-features = false}
fullcodec-jubjub = {version = "0.2", default-features = false}
rand_core = {version="0.6", default-features = false }

# substrate pallet
frame-system = { default-features = false, version = '3.0.0' }
frame-support = { default-features = false, version = '3.0.0' }
sp-std = { default-features = false, version = '3.0.0' }

# parity codec
serde = { version = "1.0.125", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }
fullcodec_rand_xorshift = {version = "0.2", default-features = false}
rand = {version = "0.8", default-features = false}

[dev-dependencies]
sp-core = { default-features = false, version = '3.0.0' }
sp-io = { default-features = false, version = '3.0.0' }
sp-runtime = { default-features = false, version = '3.0.0' }

[features]
default = ['std']
std = [
	'parity-scale-codec/std',
	'frame-support/std',
	'frame-system/std',
	'sp-std/std'
]
