[package]
authors = ['NoCtrlZ<shinsaku.ashizawa@artree.co.jp>']
description = 'zkSNARK plonk pallet rpc'
edition = '2018'
homepage = 'https://github.com/PlasmNetwork/plonk/'
license = 'Unlicense'
name = "plonk-pallet"
version = "0.1.0"
repository = 'https://github.com/PlasmNetwork/plonk/'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
