[package]
name = "api-runtime"
version = "3.0.0"
edition = "2018"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
repository = 'https://github.com/substrate-developer-hub/recipes'
description = "A runtime that features a custom runtime API that calls into a pallet"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

# Substrate packages
frame-executive = { version = '3.0', default-features = false}
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
pallet-balances = { version = '3.0', default-features = false }
pallet-randomness-collective-flip = { version = '3.0', default-features = false }
pallet-sudo = { version = '3.0', default-features = false }
pallet-timestamp = { version = '3.0', default-features = false }
pallet-transaction-payment = { version = '3.0', default-features = false }
sp-api = { version = '3.0', default-features = false }
sp-block-builder = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-inherents = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-offchain = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-session = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
sp-transaction-pool = { version = '3.0', default-features = false }
sp-version = { version = '3.0', default-features = false }

# local packages
dusk-plonk = {version = "0.1", default-features = false, package="parity-plonk", path = "../pallets/template/dusk-plonk"}
dusk-jubjub = {version = "0.1", default-features = false, package="plonk-jubjub", path = "../pallets/template/jubjub"}
plonk-pallet = { default-features = false, path = "../pallets/template" }
plonk-runtime-api = { default-features = false, path = "../pallets/template/rpc/runtime-api" }
sum-storage = { default-features = false, path = "../pallets/template/sum-storage" }
sum-storage-runtime-api = { default-features = false, path = "../pallets/template/sum-storage/runtime-api" }

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[features]
default = ["std"]
std = [
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"parity-scale-codec/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"sum-storage-runtime-api/std",
	"sum-storage/std",
]
