[package]
authors = ['NoCtrlZ<shinsaku.ashizawa@artree.co.jp>']
description = 'zkSNARK plonk pallet runtime api'
edition = '2018'
homepage = 'https://github.com/PlasmNetwork/plonk/'
license = 'Unlicense'
name = "plonk-runtime-api"
version = "0.1.0"
repository = 'https://github.com/PlasmNetwork/plonk/'

[dependencies]
sp-api = '3.0.0'
dusk-plonk = {version = "0.1", package="parity-plonk"}

[features]
default = ["std"]
std = [
	"sp-api/std",
]
