[package]
authors = ['NoCtrlZ<shinsaku.ashizawa@artree.co.jp>']
description = 'zkSNARK plonk pallet runtime api'
edition = '2018'
homepage = 'https://github.com/PlasmNetwork/plonk/'
license = 'Unlicense'
name = "plonk-runtime-api"
version = "0.1.0"
repository = 'https://github.com/PlasmNetwork/plonk/'

[dependencies]
sp-api = { version = '3.0', default-features = false}
dusk-plonk = {version = "0.1", default-features = false, package="parity-plonk", path = "../../dusk-plonk"}

[features]
default = ["std"]
std = [
	"sp-api/std",
]
